# monitor

./: .gitignore  CHANGELOG.md  cabal.project  files.dot  monitor.cabal
app/: Lib.hs  Main.hs
tests/: LibTests.hs
