cabal-version:      2.4
name:               monitor
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             NotBad4U
maintainer:         lightplay8@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable monitor
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , titlecase
                    , term-rewriting
                    , lattices
                    , machines
                    , containers
                    , graphviz
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

library
  hs-source-dirs:      app
  exposed-modules:     Lib
  build-depends:       base ^>=4.16.4.0
                    , lattices
                    , term-rewriting
                    , machines
                    , containers
  default-language:    Haskell2010

test-suite tests
   hs-source-dirs:      tests
   main-is:             LibTests.hs
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   build-depends:       base,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck,
                        HUnit,
                        smallcheck,
                        machines,
                        containers,
                        monitor,
                        